--- a/VRChat/82/1351982.html
+++ b/VRChat/82/1351982.html
@@ -78,10 +78,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "sys-game6talk" data-product-category="127"
-        data-product-id="1351982" data-product-list="market_show"
-        data-product-price="800" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="sys-game6talk" data-product-category=
+        "127" data-product-id="1351982" data-product-list=
+        "market_show" data-product-price="800" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -104,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -125,13 +126,13 @@
                             <img alt="HARALD's STUMPUKE SUPPRY"
                             class="user-avatar at-item-summary"
                             src="https://booth.pximg.net/c/48x48/users/6502432/icon_image/ae7cd81a-2bba-4b91-8b6a-2a4b6b264564_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               HARALD's STUMPUKE SUPPRY
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【VRC想定】特殊ビームサーベル　携帯型生体アロンダイト制御装置
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -220,18 +221,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1351982"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【VRC想定】特殊ビームサーベル　携帯型生体アロンダイト制御装置 | HARALD's STUMPUKE SUPPRY"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1351982"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【VRC想定】特殊ビームサーベル　携帯型生体アロンダイト制御装置 | HARALD's STUMPUKE SUPPRY"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1351982"
@@ -241,7 +241,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -317,15 +317,14 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             【生体的循環機能を持つアロンダイト粒子の制御及び装置の小型化に関する認可計画】
                           </p>
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
